# Smart-File-Search

./: .gitignore  Cargo.toml  README.md  test  test.rs
Smart-File-Search/: Cargo.toml
Smart-File-Search/src/: ai.rs  db.rs  indexer.rs  main.rs  walker.rs
src/: context.rs  db.rs  embedding.rs  lib.rs  main.rs  models.rs  scanner.rs
src/test_folder/test_folder4/: ahmet.txt
test_folder/test_folder2/test_folder3/: kayra.txt
