[package]
name = "smart_file_search"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
walkdir = "2"
fastembed = "4"         # <-- Değişiklik: 3 yerine 4 yaptık (Kararlı sürüm)
dirs = "5.0"
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
opener = "0.7"